[project]
name = "arxiv-finder"
version = "0.1.0"
description = "An AI-powered Streamlit application for efficient arXiv paper discovery and literature-review style summarization using large
  language models. It helps researchers and students quickly stay updated with the latest academic publications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "autogen-agentchat>=0.6.2",
    "autogen-core>=0.6.2",
    "autogen-ext>=0.6.2",
    "openai>=1.93.0",
    "streamlit>=1.46.1",
    "tiktoken>=0.9.0",
]
